fixtures/frontend/milestone-2/invalid/request-recurrence-missing-wakeup/main.aivi
fun step #value =>
    value

@source http.get "/users"
sig broken : Signal Int =
    0
     @|> step
     <|@ step
